# fsql

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: publish.yml  release.yml  test-suite.yml
fsql/: __init__.py  api.py  daterange_utils.py  deser.py  deser_dask.py  partition_discovery.py  query.py
src/fsql/: __init__.py  api.py  column_parser.py  daterange_utils.py  deser_vw.py  partition.py  query.py
tests/: conftest.py  test_auto_parser.py  test_dask.py  test_daterange.py  test_daterange_ext.py  test_dict_reader.py  test_example_usage.py  test_fsql.py  test_identity_reader.py  test_lex_range_query.py  test_listing_sorted.py  test_pandasreader.py  test_queries.py  test_simple_range_query.py  test_vw_reader.py  test_write_object.py
