[flake8]
max-line-length = 120
max-complexity = 10
ignore = E203, E266, W503

[metadata]
name = fsql
description = Metastore-like capabilities for various filesystems
long_description = file: README.md
long_description_content_type = text/markdown
license=" BSD-3-Clause"
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = fsql
python_requires = >=3.8
install_requires =
    pandas

[options.extras_require]
test =
    coverage
    fastparquet
    pyarrow
    moto
    pytest
    boto3 <= 1.17.106 # TODO only unrestricted fsspec[s3] should remain here, and instead tests should be run from some pinned env
    s3fs <= 0.4.2
    fsspec[s3] <= 2022.2.0
    aiobotocore <= 1.4.2

s3 =
    boto3 <= 1.17.106 # TODO only unrestricted fsspec[s3] should remain here, and instead tests should be run from some pinned env
    s3fs <= 0.4.2
    fsspec[s3] <= 2022.2.0
    aiobotocore <= 1.4.2

xlsx =
    openpyxl