[flake8]
max-line-length = 120
max-complexity = 10
ignore = E203, E266, W503

[metadata]
name = fsql
description = Metastore-like capabilities for various filesystems
long_description = file: README.md
long_description_content_type = text/markdown
license=" BSD-3-Clause"
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = fsql
python_requires = >=3.8
install_requires =
    pandas

[options.extras_require]
test =
    coverage
    fastparquet
    pyarrow
    moto
    pytest
    %(s3)s
    %(xlsx)s
    %(dask)s

s3 =
    fsspec[s3] >= 2022.5.0

xlsx =
    openpyxl

dask =
    dask
